--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "1"
-path = "src/1.rs"
+name = "1a"
+path = "src/1a.rs"
 
 [[bin]]
-name = "2"
-path = "src/2.rs"
+name = "1b"
+path = "src/1b.rs"
+
+[[bin]]
+name = "2a"
+path = "src/2a.rs"
+
+[[bin]]
+name = "2b"
+path = "src/2b.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
